factor create virker

--- a/part_ii.ipynb
+++ b/part_ii.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,16 +38,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([ 6,  7, 10], dtype=int64)"
+       "array([ 6,  7, 10])"
       ]
      },
-     "execution_count": 72,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -102,19 +102,17 @@
     "    cpd = create_factor(variable, parent_list)\n",
     "    variables = list(cpd.columns)\n",
     "    n = len(variables)\n",
+    "    cpd_e = cpd.copy()\n",
     "    if n == 1:\n",
-    "        factor = alpha # more needed here - add to dataframe \n",
-    "        cpd_e = cpd[cpd[f\"{variables[n-1]}\"]==1].copy()\n",
     "        cpd_e[\"prob\"] = 1 - alpha\n",
     "        return cpd_e\n",
     "    else:\n",
     "        child = variables[n-1]\n",
-    "        # restrict to X == 1\n",
-    "        cpd_e = cpd[cpd[f\"{variables[n-1]}\"]==1].copy()\n",
     "        # generate factor \n",
     "        parents = cpd_e.iloc[:,:-1].copy()\n",
     "        parents[\"sum\"] = parents.sum(axis=1)\n",
     "        cpd_e[\"prob\"] = 1 - (alpha ** (1 + parents[\"sum\"]))\n",
+    "        cpd_e[\"prob\"].where(cpd_e[f\"{child}\"] == 0, 1-cpd_e[\"prob\"],axis=0,inplace=True)\n",
     "        return cpd_e\n",
     "    \n",
     "factor_test = cpd_factor(elimination_scope[2][0], elimination_scope[2][1], alpha)\n"
@@ -122,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -130,10 +128,14 @@
      "output_type": "stream",
      "text": [
       "(   X7  X8  X1   prob\n",
+      "0   0   0   0  0.500\n",
       "1   0   0   1  0.500\n",
-      "3   0   1   1  0.750\n",
-      "5   1   0   1  0.750\n",
-      "7   1   1   1  0.875, 'phi_X1')\n"
+      "2   0   1   0  0.750\n",
+      "3   0   1   1  0.250\n",
+      "4   1   0   0  0.750\n",
+      "5   1   0   1  0.250\n",
+      "6   1   1   0  0.875\n",
+      "7   1   1   1  0.125, 'phi_X1')\n"
      ]
     }
    ],
@@ -158,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -195,91 +197,331 @@
        "      <th>0</th>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>1</td>\n",
        "      <td>0</td>\n",
-       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
        "      <td>0.250000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
        "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0.375000</td>\n",
+       "      <td>0.250000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
+       "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>1</td>\n",
-       "      <td>0.562500</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.375000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0.656250</td>\n",
+       "      <td>0.125000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.250000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
        "      <td>1</td>\n",
+       "      <td>0.250000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.375000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.125000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.375000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>1</td>\n",
        "      <td>0.375000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>5</th>\n",
+       "      <th>10</th>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
+       "      <td>0</td>\n",
        "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
+       "      <td>0</td>\n",
        "      <td>0.562500</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>6</th>\n",
+       "      <th>11</th>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.187500</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.125000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.125000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.187500</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.062500</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.562500</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.187500</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.656250</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19</th>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.093750</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20</th>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.187500</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>21</th>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.062500</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>22</th>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.218750</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>23</th>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.031250</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>24</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.656250</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.218750</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>26</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.765625</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>27</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.109375</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>28</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.093750</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>29</th>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
        "      <td>1</td>\n",
-       "      <td>0.656250</td>\n",
+       "      <td>0.031250</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>7</th>\n",
+       "      <th>30</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.109375</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>31</th>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
-       "      <td>0.765625</td>\n",
+       "      <td>0.015625</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   X7  X8  X1  X4  X2      prob\n",
-       "0   0   0   1   0   1  0.250000\n",
-       "1   0   0   1   1   1  0.375000\n",
-       "2   0   1   1   0   1  0.562500\n",
-       "3   0   1   1   1   1  0.656250\n",
-       "4   1   0   1   0   1  0.375000\n",
-       "5   1   0   1   1   1  0.562500\n",
-       "6   1   1   1   0   1  0.656250\n",
-       "7   1   1   1   1   1  0.765625"
+       "    X7  X8  X1  X4  X2      prob\n",
+       "0    0   0   0   0   0  0.250000\n",
+       "1    0   0   0   0   1  0.250000\n",
+       "2    0   0   0   1   0  0.375000\n",
+       "3    0   0   0   1   1  0.125000\n",
+       "4    0   0   1   0   0  0.250000\n",
+       "5    0   0   1   0   1  0.250000\n",
+       "6    0   0   1   1   0  0.375000\n",
+       "7    0   0   1   1   1  0.125000\n",
+       "8    1   0   0   0   0  0.375000\n",
+       "9    1   0   0   0   1  0.375000\n",
+       "10   1   0   0   1   0  0.562500\n",
+       "11   1   0   0   1   1  0.187500\n",
+       "12   1   0   1   0   0  0.125000\n",
+       "13   1   0   1   0   1  0.125000\n",
+       "14   1   0   1   1   0  0.187500\n",
+       "15   1   0   1   1   1  0.062500\n",
+       "16   0   1   0   0   0  0.562500\n",
+       "17   0   1   0   0   1  0.187500\n",
+       "18   0   1   0   1   0  0.656250\n",
+       "19   0   1   0   1   1  0.093750\n",
+       "20   0   1   1   0   0  0.187500\n",
+       "21   0   1   1   0   1  0.062500\n",
+       "22   0   1   1   1   0  0.218750\n",
+       "23   0   1   1   1   1  0.031250\n",
+       "24   1   1   0   0   0  0.656250\n",
+       "25   1   1   0   0   1  0.218750\n",
+       "26   1   1   0   1   0  0.765625\n",
+       "27   1   1   0   1   1  0.109375\n",
+       "28   1   1   1   0   0  0.093750\n",
+       "29   1   1   1   0   1  0.031250\n",
+       "30   1   1   1   1   0  0.109375\n",
+       "31   1   1   1   1   1  0.015625"
       ]
      },
-     "execution_count": 76,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -303,7 +545,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -311,46 +553,82 @@
      "output_type": "stream",
      "text": [
       "[(   X4  X8  X2   prob\n",
+      "0   0   0   0  0.500\n",
       "1   0   0   1  0.500\n",
-      "3   0   1   1  0.750\n",
-      "5   1   0   1  0.750\n",
-      "7   1   1   1  0.875, 'phi_X2'), (   X9  X8  X3   prob\n",
+      "2   0   1   0  0.750\n",
+      "3   0   1   1  0.250\n",
+      "4   1   0   0  0.750\n",
+      "5   1   0   1  0.250\n",
+      "6   1   1   0  0.875\n",
+      "7   1   1   1  0.125, 'phi_X2'), (   X9  X8  X3   prob\n",
+      "0   0   0   0  0.500\n",
       "1   0   0   1  0.500\n",
-      "3   0   1   1  0.750\n",
-      "5   1   0   1  0.750\n",
-      "7   1   1   1  0.875, 'phi_X3'), (   X9  X8  X5   prob\n",
+      "2   0   1   0  0.750\n",
+      "3   0   1   1  0.250\n",
+      "4   1   0   0  0.750\n",
+      "5   1   0   1  0.250\n",
+      "6   1   1   0  0.875\n",
+      "7   1   1   1  0.125, 'phi_X3'), (   X9  X8  X5   prob\n",
+      "0   0   0   0  0.500\n",
       "1   0   0   1  0.500\n",
-      "3   0   1   1  0.750\n",
-      "5   1   0   1  0.750\n",
-      "7   1   1   1  0.875, 'phi_X5'), (    X11  X8  X9  X4    prob\n",
+      "2   0   1   0  0.750\n",
+      "3   0   1   1  0.250\n",
+      "4   1   0   0  0.750\n",
+      "5   1   0   1  0.250\n",
+      "6   1   1   0  0.875\n",
+      "7   1   1   1  0.125, 'phi_X5'), (    X11  X8  X9  X4    prob\n",
+      "0     0   0   0   0  0.5000\n",
       "1     0   0   0   1  0.5000\n",
-      "3     0   0   1   1  0.7500\n",
-      "5     0   1   0   1  0.7500\n",
-      "7     0   1   1   1  0.8750\n",
-      "9     1   0   0   1  0.7500\n",
-      "11    1   0   1   1  0.8750\n",
-      "13    1   1   0   1  0.8750\n",
-      "15    1   1   1   1  0.9375, 'phi_X4'), (   X7  X10  X6   prob\n",
+      "2     0   0   1   0  0.7500\n",
+      "3     0   0   1   1  0.2500\n",
+      "4     0   1   0   0  0.7500\n",
+      "5     0   1   0   1  0.2500\n",
+      "6     0   1   1   0  0.8750\n",
+      "7     0   1   1   1  0.1250\n",
+      "8     1   0   0   0  0.7500\n",
+      "9     1   0   0   1  0.2500\n",
+      "10    1   0   1   0  0.8750\n",
+      "11    1   0   1   1  0.1250\n",
+      "12    1   1   0   0  0.8750\n",
+      "13    1   1   0   1  0.1250\n",
+      "14    1   1   1   0  0.9375\n",
+      "15    1   1   1   1  0.0625, 'phi_X4'), (   X7  X10  X6   prob\n",
+      "0   0    0   0  0.500\n",
       "1   0    0   1  0.500\n",
-      "3   0    1   1  0.750\n",
-      "5   1    0   1  0.750\n",
-      "7   1    1   1  0.875, 'phi_X6'), (   X7  prob\n",
+      "2   0    1   0  0.750\n",
+      "3   0    1   1  0.250\n",
+      "4   1    0   0  0.750\n",
+      "5   1    0   1  0.250\n",
+      "6   1    1   0  0.875\n",
+      "7   1    1   1  0.125, 'phi_X6'), (   X7  prob\n",
+      "0   0   0.5\n",
       "1   1   0.5, 'phi_X7'), (   X8  prob\n",
+      "0   0   0.5\n",
       "1   1   0.5, 'phi_X8'), (   X10  X6  X9   prob\n",
+      "0    0   0   0  0.500\n",
       "1    0   0   1  0.500\n",
-      "3    0   1   1  0.750\n",
-      "5    1   0   1  0.750\n",
-      "7    1   1   1  0.875, 'phi_X9'), (   X7  X10  prob\n",
+      "2    0   1   0  0.750\n",
+      "3    0   1   1  0.250\n",
+      "4    1   0   0  0.750\n",
+      "5    1   0   1  0.250\n",
+      "6    1   1   0  0.875\n",
+      "7    1   1   1  0.125, 'phi_X9'), (   X7  X10  prob\n",
+      "0   0    0  0.50\n",
       "1   0    1  0.50\n",
-      "3   1    1  0.75, 'phi_X10'), (   X8  X9  X11   prob\n",
+      "2   1    0  0.75\n",
+      "3   1    1  0.25, 'phi_X10'), (   X8  X9  X11   prob\n",
+      "0   0   0    0  0.500\n",
       "1   0   0    1  0.500\n",
-      "3   0   1    1  0.750\n",
-      "5   1   0    1  0.750\n",
-      "7   1   1    1  0.875, 'phi_X11'), (   X7  X8   prob\n",
-      "0   0   0  0.500\n",
-      "1   0   1  0.750\n",
-      "2   1   0  0.750\n",
-      "3   1   1  0.875, 'tau_X1')]\n"
+      "2   0   1    0  0.750\n",
+      "3   0   1    1  0.250\n",
+      "4   1   0    0  0.750\n",
+      "5   1   0    1  0.250\n",
+      "6   1   1    0  0.875\n",
+      "7   1   1    1  0.125, 'phi_X11'), (   X7  X8  prob\n",
+      "0   0   0   1.0\n",
+      "1   0   1   1.0\n",
+      "2   1   0   1.0\n",
+      "3   1   1   1.0, 'tau_X1')]\n"
      ]
     }
    ],
@@ -403,7 +681,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -420,7 +698,10 @@
       "X8 ['tau_X8']\n",
       "X9 ['tau_X9']\n",
       "[(   X11  X10      prob\n",
-      "0    1    1  0.069029, 'tau_X9')]\n"
+      "0    0    0  0.438965\n",
+      "1    0    1  0.250122\n",
+      "2    1    0  0.186035\n",
+      "3    1    1  0.124878, 'tau_X9')]\n"
      ]
     }
    ],
