--- a/tove.ipynb
+++ b/tove.ipynb
@@ -702,6 +702,37 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def create_factor(variable,parent_list):\n",
+    "    d = 1 + len(parent_list)\n",
+    "    m = 2 ** 2\n",
+    "    columns = parent_list + [variable]\n",
+    "    df = pd.DataFrame(product([0,1],repeat=d),columns=columns)\n",
+    "    return df\n",
+    "\n",
+    "def cpd_factor(variable, parent_list, alpha):\n",
+    "    cpd = create_factor(variable, parent_list)\n",
+    "    variables = list(cpd.columns)\n",
+    "    n = len(variables)\n",
+    "    cpd_e = cpd.copy()\n",
+    "    if n == 1:\n",
+    "        cpd_e[\"prob\"] = 1 - alpha\n",
+    "        return cpd_e\n",
+    "    else:\n",
+    "        child = variables[n-1]\n",
+    "        # generate factor \n",
+    "        parents = cpd_e.iloc[:,:-1].copy()\n",
+    "        parents[\"sum\"] = parents.sum(axis=1)\n",
+    "        cpd_e[\"prob\"] = 1 - (alpha ** (1 + parents[\"sum\"]))\n",
+    "        cpd_e[\"prob\"].where(cpd_e[f\"{child}\"] == 0, 1-cpd_e[\"prob\"],axis=0,inplace=True)\n",
+    "        return cpd_e"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 296,
    "metadata": {},
    "outputs": [
