--- a/tove.ipynb
+++ b/tove.ipynb
@@ -1351,24 +1351,126 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 268,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(cpd_from_data(test4,data))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Part 2 - 2 cond-prob-VE"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 300,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0.2309495896834701\n",
-      "   Erk  Mek  Akt     probs  cond_prob\n",
-      "1    0    0    1  0.039859   0.172589\n",
-      "3    0    1    1  0.009379   0.040609\n",
-      "5    1    0    1  0.111372   0.482234\n",
-      "7    1    1    1  0.070340   0.304569\n"
-     ]
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Erk</th>\n",
+       "      <th>Mek</th>\n",
+       "      <th>Akt</th>\n",
+       "      <th>Factor</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.750</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.750</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.875</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.875</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Erk  Mek  Akt  Factor\n",
+       "2    0    1    0   0.750\n",
+       "3    0    1    1   0.750\n",
+       "6    1    1    0   0.875\n",
+       "7    1    1    1   0.875"
+      ]
+     },
+     "execution_count": 300,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "print(cpd_from_data(test4,data))"
+    "test5 = cpd_factor_large(test4.copy(),0.5)\n",
+    "test5[test5[\"Mek\"]==1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def cond_prob_ve (factors: list, queries: list, evidence: str, order: list):\n",
+    "    factors_list = [i[0] for i in factors] # Factors\n",
+    "    names_list = [i[1] for i in factors] # Names of factors\n",
+    "\n",
+    "    for i in range(0,len(factors_list)):\n",
+    "        if evidence in factors_list[i].columns:\n",
+    "            factors_list[i] = factors_list[i][factors_list[i][evidence]==1]\n",
+    "    \n",
+    "    not_elim = queries + [evidence]\n",
+    "\n",
+    "    for elm in not_elim:\n",
+    "        order.remove(elm)\n",
+    "    \n",
+    "    phi = sum_product_ve(factors,order)\n",
+    "    \n",
+    "    a = 0 # some sum over phi(y)\n",
+    "    return a, phi"
    ]
   }
  ],
