--- a/tove.ipynb
+++ b/tove.ipynb
@@ -1459,9 +1459,10 @@
     "    names_list = [i[1] for i in factors] # Names of factors\n",
     "\n",
     "    for i in range(0,len(factors_list)):\n",
-    "        if evidence in factors_list[i].columns:\n",
-    "            factors_list[i] = factors_list[i][factors_list[i][evidence]==1]\n",
-    "    \n",
+    "        for elm in evidence:\n",
+    "            if elm in factors_list[i].columns:\n",
+    "                factors_list[i] = factors_list[i][factors_list[i][evidence]==1]\n",
+    "        \n",
     "    not_elim = queries + [evidence]\n",
     "\n",
     "    for elm in not_elim:\n",
