--- a/part_ii.ipynb
+++ b/part_ii.ipynb
@@ -878,7 +878,42 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "variables_to_eliminate = ['X1', 'X2', 'X3', 'X4', 'X5', 'X6', 'X7', 'X8', 'X9']\n",
+    "K = ['X1', 'X2', 'X3', 'X4', 'X5', 'X6', 'X7', 'X8', 'X9', 'X10', 'X11']\n",
+    "evidence = ['X1', 'X2', 'X3']\n",
+    "query_var = ['X10', 'X11']\n",
+    "\n",
+    "# k -  parameterizing nework k over X\n",
+    "# query_var - Set of query variables Y\n",
+    "# order - Elimination order (order)\n",
+    "# evidence - observed values e for variables in E\n",
+    "def cond_prob_ve (factors: list, queries: list, evidence: list, order: list):\n",
+    "    order_ = order.copy() # Fix for wierd python handeling of list\n",
+    "    factors_list = [i[0] for i in factors] # Factors\n",
+    "    names_list = [i[1] for i in factors] # Names of factors\n",
+    "\n",
+    "    for i in range(0,len(factors_list)): # Loop through factors\n",
+    "        for elm in evidence: # Loop through evidence\n",
+    "            if elm in factors_list[i].columns:\n",
+    "                # Retrict factor to evidence == 1, and replace in factor list\n",
+    "                factors_list[i] = factors_list[i][factors_list[i][elm]==1]\n",
+    "    \n",
+    "    # Remove elemetns we want to keep from elemination order\n",
+    "    for elm in evidence:\n",
+    "        order_.remove(elm)\n",
+    "    \n",
+    "    concat_factor_list = list(zip(factors_list,names_list))\n",
+    "    phi = sum_product_ve(concat_factor_list, order_)\n",
+    "    print(phi)\n",
+    "\n",
+    "    alpha = phi[0][0].groupby(queries, as_index = False)['prob'].sum()\n",
+    "    print(alpha)\n",
+    "\n",
+    "    # a = 0 # some sum over phi(y)\n",
+    "    return 0\n",
+    "cond_prob_ve(factor_list, query_var, evidence, variables_to_eliminate)"
+   ]
   }
  ],
  "metadata": {
