--- a/part_i.ipynb
+++ b/part_i.ipynb
@@ -61,7 +61,7 @@
     }
    ],
    "source": [
-    "# Directed\n",
+    "# Adjacency matrix\n",
     "df_adj = pd.read_csv('dataset/consensus_adj_mat.csv')\n",
     "print(df_adj)"
    ]
