--- a/part_ii.ipynb
+++ b/part_ii.ipynb
@@ -186,20 +186,20 @@
     "    cpd = create_factor(variable, parent_list)\n",
     "    variables = list(cpd.columns)\n",
     "    n = len(variables)\n",
-    "    cpd_e = cpd.copy()\n",
+    "    cpd_ = cpd.copy() \n",
     "    if n == 1:\n",
-    "        cpd_e[\"prob\"] = 1 - alpha\n",
-    "        return cpd_e\n",
+    "        cpd_[\"prob\"] = 1 - alpha\n",
+    "        return cpd_\n",
     "    else:\n",
     "        child = variables[n-1]\n",
     "        # generate factor \n",
-    "        parents = cpd_e.iloc[:,:-1].copy()\n",
+    "        parents = cpd_.iloc[:,:-1].copy()\n",
     "        parents[\"sum\"] = parents.sum(axis=1)\n",
-    "        cpd_e[\"prob\"] = 1 - (alpha ** (1 + parents[\"sum\"]))\n",
+    "        cpd_[\"prob\"] = 1 - (alpha ** (1 + parents[\"sum\"]))\n",
     "        # Update the probability where condition false\n",
     "        # St. we can compute the probability of P(X=0|parents) = 1 - P(X=1|parents)\n",
-    "        cpd_e[\"prob\"].where(cpd_e[f\"{child}\"] == 1, 1-cpd_e[\"prob\"],axis=0,inplace=True)\n",
-    "        return cpd_e\n",
+    "        cpd_[\"prob\"].where(cpd_[f\"{child}\"] == 1, 1-cpd_[\"prob\"],axis=0,inplace=True)\n",
+    "        return cpd_\n",
     "    \n",
     "factor_test = cpd_factor(elimination_scope[2][0], elimination_scope[2][1], alpha)\n",
     "factor_test\n"
@@ -228,7 +228,7 @@
    ],
    "source": [
     "# Generate factors for all nodes\n",
-    "# list form: [(factor, name), ... ]\n",
+    "# list form: [(factor, protein name), ... ]\n",
     "factor_list = []\n",
     "for elm in elimination_scope:\n",
     "    name = 'phi_' + str(elm[0])\n",
