--- a/part_ii.ipynb
+++ b/part_ii.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -170,7 +170,7 @@
        "7   1   1   1  0.875"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -207,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -247,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -608,7 +608,7 @@
        "31   1   1   1   1   1  0.765625"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -632,7 +632,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -768,7 +768,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -806,7 +806,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -825,15 +825,15 @@
       "X8 ['tau_X8']\n",
       "X9 ['tau_X9']\n",
       "[(   X11  X10      prob\n",
-      "0    0    0  0.032447\n",
-      "1    0    1  0.053647\n",
-      "2    1    0  0.124489\n",
-      "3    1    1  0.239619, 'tau_X9')]\n",
+      "0    0    0  0.000090\n",
+      "1    0    1  0.000158\n",
+      "2    1    0  0.000135\n",
+      "3    1    1  0.000237, 'tau_X9')]\n",
       "   X10  X11      prob\n",
-      "0    0    0  0.032447\n",
-      "1    0    1  0.124489\n",
-      "2    1    0  0.053647\n",
-      "3    1    1  0.239619\n"
+      "0    0    0  0.000090\n",
+      "1    0    1  0.000135\n",
+      "2    1    0  0.000158\n",
+      "3    1    1  0.000237\n"
      ]
     },
     {
@@ -842,7 +842,7 @@
        "0"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -850,7 +850,7 @@
    "source": [
     "variables_to_eliminate = ['X1', 'X2', 'X3', 'X4', 'X5', 'X6', 'X7', 'X8', 'X9']\n",
     "K = ['X1', 'X2', 'X3', 'X4', 'X5', 'X6', 'X7', 'X8', 'X9', 'X10', 'X11']\n",
-    "evidence = ['X1', 'X2', 'X3']\n",
+    "evidence = [('X1', 1), ('X2',1), ('X3',0),('X4',0),(\"X5\",1),('X6',1),('X7',1),('X8',1),('X9',0)]\n",
     "query_var = ['X10', 'X11']\n",
     "\n",
     "# k - parameterizing nework k over X\n",
@@ -864,9 +864,9 @@
     "\n",
     "    for i in range(0,len(factors_list)): # Loop through factors\n",
     "        for elm in evidence: # Loop through evidence\n",
-    "            if elm in factors_list[i].columns:\n",
-    "                # Retrict factor to evidence == 1, and replace in factor list\n",
-    "                factors_list[i] = factors_list[i][factors_list[i][elm]==1]\n",
+    "            if elm[0] in factors_list[i].columns:\n",
+    "                # Retrict factor to evidence == e, and replace in factor list\n",
+    "                factors_list[i] = factors_list[i][factors_list[i][elm[0]]==elm[1]]\n",
     "    \n",
     "    # Remove elemetns we want to keep from elemination order\n",
     "    # for elm in evidence:\n",
@@ -881,6 +881,8 @@
     "    alpha = phi[0][0].groupby(queries, as_index = False)['prob'].sum()\n",
     "    print(alpha)\n",
     "\n",
+    "    #phi[0][0]['test'] = phi[0][0]['prob']*(1/(alpha['prob']))\n",
+    "    #print(phi)\n",
     "    # a = 0 # some sum over phi(y)\n",
     "    return 0\n",
     "\n",
