--- a/part_ii.ipynb
+++ b/part_ii.ipynb
@@ -806,7 +806,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -830,19 +830,29 @@
       "2    1    0  0.000135\n",
       "3    1    1  0.000237, 'tau_X9')]\n",
       "   X10  X11      prob\n",
-      "0    0    0  0.000090\n",
-      "1    0    1  0.000135\n",
-      "2    1    0  0.000158\n",
-      "3    1    1  0.000237\n"
+      "0    0    0  0.145455\n",
+      "1    0    1  0.218182\n",
+      "2    1    0  0.254545\n",
+      "3    1    1  0.381818\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "0"
+       "(   X10  X11      prob\n",
+       " 0    0    0  0.145455\n",
+       " 1    0    1  0.218182\n",
+       " 2    1    0  0.254545\n",
+       " 3    1    1  0.381818,\n",
+       " [(   X11  X10      prob\n",
+       "   0    0    0  0.000090\n",
+       "   1    0    1  0.000158\n",
+       "   2    1    0  0.000135\n",
+       "   3    1    1  0.000237,\n",
+       "   'tau_X9')])"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -850,7 +860,7 @@
    "source": [
     "variables_to_eliminate = ['X1', 'X2', 'X3', 'X4', 'X5', 'X6', 'X7', 'X8', 'X9']\n",
     "K = ['X1', 'X2', 'X3', 'X4', 'X5', 'X6', 'X7', 'X8', 'X9', 'X10', 'X11']\n",
-    "evidence = [('X1', 1), ('X2',1), ('X3',0),('X4',0),(\"X5\",1),('X6',1),('X7',1),('X8',1),('X9',0)]\n",
+    "evidence = [('X1', 1), ('X2',1), ('X3',1),('X4',1),(\"X5\",1),('X6',1),('X7',1),('X8',1),('X9',0)]\n",
     "query_var = ['X10', 'X11']\n",
     "\n",
     "# k - parameterizing nework k over X\n",
@@ -879,12 +889,13 @@
     "    print(phi)\n",
     "\n",
     "    alpha = phi[0][0].groupby(queries, as_index = False)['prob'].sum()\n",
+    "    alpha['prob'] = alpha['prob'] / alpha['prob'].sum() # Normalize the probability\n",
     "    print(alpha)\n",
     "\n",
     "    #phi[0][0]['test'] = phi[0][0]['prob']*(1/(alpha['prob']))\n",
     "    #print(phi)\n",
     "    # a = 0 # some sum over phi(y)\n",
-    "    return 0\n",
+    "    return alpha, phi\n",
     "\n",
     "cond_prob_ve(factor_list, query_var, evidence, variables_to_eliminate)"
    ]
